--- a/funcionarios.html
+++ b/funcionarios.html
@@ -11,123 +11,45 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
 <style>
-body { 
-  font-family: Inter, sans-serif; 
-  background:#f4f4f4; 
-}
+body{font-family:Inter,sans-serif;background:#f4f4f4}
+.topbar{background:#2b2f33;color:#fff;padding:12px 0}
+.logo{font-weight:700;font-size:18px}
+.subtitulo{background:#ddd;text-align:center;font-weight:700;padding:6px;margin:30px 0 15px}
 
-/* ===== TOPBAR ===== */
-.topbar{
-  background:#2b2f33;
-  color:#fff;
-  padding:12px 0;
+.card-employee{border-radius:16px;overflow:hidden;position:relative}
+.card-employee img{
+  height:180px;width:100%;object-fit:cover;
+  pointer-events:none;user-select:none;-webkit-user-drag:none
 }
+.btn-remover{
+  position:absolute;top:8px;right:8px;width:30px;height:30px;
+  border-radius:50%;background:#dc3545;color:#fff;border:none;
+  display:none;font-weight:700
+}
+.gerencia-mode .btn-remover{display:block}
 
-.logo{
-  font-weight:700;
-  letter-spacing:.6px;
-  font-size:18px;
+.admin-btn{position:fixed;right:20px;bottom:20px;z-index:1001}
+.admin-menu{
+  position:fixed;right:-380px;top:0;width:380px;height:100%;
+  background:#fff;box-shadow:-4px 0 20px rgba(0,0,0,.2);
+  padding:20px;transition:.3s;z-index:1000
 }
+.admin-menu.open{right:0}
 
-.nav-links a{
-  color:#fff;
-  text-decoration:none;
-  margin-left:18px;
-  font-weight:600;
+.badge-gerencia{
+  display:none;background:#dc3545;color:#fff;
+  font-weight:700;padding:6px 10px;border-radius:8px;font-size:12px
 }
-
-/* ===== TITULOS ===== */
-.subtitulo {
-  background:#ddd;
-  text-align:center;
-  font-weight:700;
-  padding:6px;
-  margin:30px 0 15px;
-}
-
-/* ===== CARDS ===== */
-.card-employee {
-  border-radius:16px;
-  overflow:hidden;
-  position:relative;
-}
-
-/* IMAGEM PROTEGIDA */
-.card-employee img {
-  height:180px;
-  width:100%;
-  object-fit:cover;
-  pointer-events:none;
-  user-select:none;
-  -webkit-user-drag:none;
-}
-
-/* OVERLAY INVISÍVEL */
-.card-employee::after{
-  content:"";
-  position:absolute;
-  inset:0;
-  z-index:5;
-}
-
-/* ===== BOTAO REMOVER ===== */
-.btn-remover {
-  position:absolute;
-  top:8px;
-  right:8px;
-  width:30px;
-  height:30px;
-  border-radius:50%;
-  background:#dc3545;
-  color:#fff;
-  border:none;
-  display:none;
-  font-weight:700;
-  z-index:10;
-}
-
-.gerencia-mode .btn-remover {
-  display:block;
-}
-
-/* ===== ADMIN ===== */
-.admin-btn {
-  position:fixed;
-  right:20px;
-  bottom:20px;
-  z-index:1001;
-}
-.admin-menu {
-  position:fixed;
-  right:-380px;
-  top:0;
-  width:380px;
-  height:100%;
-  background:#fff;
-  box-shadow:-4px 0 20px rgba(0,0,0,.2);
-  padding:20px;
-  transition:.3s;
-  z-index:1000;
-}
-.admin-menu.open { right:0; }
+.gerencia-ativa .badge-gerencia{display:inline-block}
 </style>
 </head>
 
 <body>
 
 <header class="topbar">
-  <div class="container d-flex justify-content-between align-items-center">
-    <div class="d-flex align-items-center gap-3">
-      <img src="https://imgur.com/0iskhD3.png" style="height:70px;border-radius:8px">
-      <div class="logo">Central Race</div>
-    </div>
-
-    <nav class="d-none d-md-flex nav-links">
-      <a href="index.html">Início</a>
-      <a href="tabela.html">Preços</a>
-      <a href="relatorio.html">Relatório</a>
-      <a href="funcionarios.html">Funcionários</a>
-    </nav>
+  <div class="container d-flex align-items-center gap-3">
+    <img src="https://imgur.com/0iskhD3.png" style="height:60px;border-radius:8px">
+    <div class="logo">Central Race</div>
   </div>
 </header>
 
@@ -136,15 +58,18 @@ body {
   <div id="listaCargos"></div>
 </main>
 
-<button class="btn btn-dark admin-btn" onclick="abrirAdmin()">Admin</button>
+<button class="btn btn-dark admin-btn" onclick="abrirAdmin()">Acesso Mecânico</button>
 <button class="btn btn-danger admin-btn" style="bottom:70px" onclick="acessoGerencia()">Acesso Gerência</button>
 
 <div class="admin-menu" id="adminMenu">
-  <h5>Painel Admin</h5>
+  <div class="d-flex justify-content-between align-items-center">
+    <h5>Painel</h5>
+    <span class="badge-gerencia">GERÊNCIA</span>
+  </div>
   <hr>
 
   <label>Cargo</label>
-  <select id="cargo" class="form-select mb-2"></select>
+  <select id="cargo" class="form-select mb-2" onchange="validarBotao()"></select>
 
   <label>Nome</label>
   <input id="nome" class="form-control mb-2">
@@ -152,60 +77,107 @@ body {
   <label>Foto</label>
   <input id="foto" type="file" accept="image/*" class="form-control mb-3">
 
-  <button class="btn btn-primary w-100" onclick="adicionarVaga()">Adicionar vaga</button>
+  <button id="btnAdd" class="btn btn-primary w-100" disabled onclick="adicionarVaga()">
+    Adicionar vaga
+  </button>
 </div>
 
 <script type="module">
-/* ===== CARGOS ===== */
-const CARGOS = ["Responsável Mecânico","Líder","Sub-Líder","Gerente","Supervisor de Turnagem","Turnagem","Reparo"];
+/* CARGOS */
+const CARGOS=[
+  "Responsável Mecânico","Líder","Sub-Líder",
+  "Gerente","Supervisor de Turnagem","Turnagem","Reparo"
+];
+const CARGOS_GERENCIA=[
+  "Responsável Mecânico","Líder","Sub-Líder",
+  "Gerente","Supervisor de Turnagem"
+];
 
-/* ===== FIREBASE ===== */
+/* DISCORD */
+const DISCORD_WEBHOOK="COLE_AQUI_A_URL_DO_WEBHOOK";
+
+/* FIREBASE */
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getFirestore, collection, doc, getDocs, setDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-const app = initializeApp({
-  apiKey: "AIzaSyD2zieCD4d-_olcWE6O0QlepyxWLGhyI",
-  authDomain: "centralrace-c4ad0.firebaseapp.com",
-  projectId: "centralrace-c4ad0"
+const app=initializeApp({
+  apiKey:"AIzaSyD2zieCD4d-_olcWE6O0QlepyxWLGhyI",
+  authDomain:"centralrace-c4ad0.firebaseapp.com",
+  projectId:"centralrace-c4ad0"
 });
-const db = getFirestore(app);
+const db=getFirestore(app);
 
-/* ===== CLOUDINARY ===== */
+/* CLOUDINARY */
 const CLOUD_NAME="dfyiwxdhn";
 const UPLOAD_PRESET="funcionarios";
-
-async function uploadImagem(file){
+async function uploadImagem(f){
   const fd=new FormData();
-  fd.append("file",file);
+  fd.append("file",f);
   fd.append("upload_preset",UPLOAD_PRESET);
-  const res=await fetch(`https://api.cloudinary.com/v1_1/${CLOUD_NAME}/image/upload`,{method:"POST",body:fd});
-  return (await res.json()).secure_url;
+  const r=await fetch(`https://api.cloudinary.com/v1_1/${CLOUD_NAME}/image/upload`,{method:"POST",body:fd});
+  return (await r.json()).secure_url;
 }
 
-/* ===== SENHAS ===== */
+/* SENHAS */
 const SENHA_ADMIN="admin123";
 const SENHA_GERENCIA="gerencia456";
 let gerenciaAtiva=false;
 
-/* ===== ADMIN ===== */
+/* LOG */
+async function logDiscord(acao,d){
+  await fetch(DISCORD_WEBHOOK,{
+    method:"POST",
+    headers:{"Content-Type":"application/json"},
+    body:JSON.stringify({
+      username:"Central Race Logs",
+      embeds:[{
+        title:acao,
+        color:acao.includes("ADICIONOU")?0x2ecc71:0xe74c3c,
+        fields:[
+          {name:"Funcionário",value:d.nome,inline:true},
+          {name:"Cargo",value:d.cargo,inline:true},
+          {name:"Acesso",value:d.acesso,inline:true},
+          {name:"Data",value:new Date().toLocaleString("pt-BR")}
+        ]
+      }]
+    })
+  });
+}
+
+/* SELECT */
+function atualizarSelectCargo(){
+  cargo.innerHTML='<option value="">Selecione</option>';
+  CARGOS.forEach(c=>{
+    if(CARGOS_GERENCIA.includes(c)&&!gerenciaAtiva)return;
+    cargo.innerHTML+=`<option>${c}</option>`;
+  });
+  validarBotao();
+}
+window.validarBotao=()=>btnAdd.disabled=!cargo.value;
+
+/* ADMIN */
 window.abrirAdmin=()=>{
   if(prompt("Senha Admin:")===SENHA_ADMIN){
     adminMenu.classList.toggle("open");
+    atualizarSelectCargo();
   }
 };
 
-/* ===== GERÊNCIA ===== */
+/* GERÊNCIA */
 window.acessoGerencia=()=>{
   if(prompt("Senha Gerência:")===SENHA_GERENCIA){
     gerenciaAtiva=true;
-    document.body.classList.add("gerencia-mode");
+    document.body.classList.add("gerencia-mode","gerencia-ativa");
+    atualizarSelectCargo();
     alert("Modo Gerência ativado");
-  } else alert("Senha incorreta");
+  }
 };
 
-/* ===== ADICIONAR ===== */
+/* ADICIONAR */
 window.adicionarVaga=async()=>{
+  if(CARGOS_GERENCIA.includes(cargo.value)&&!gerenciaAtiva)return alert("Apenas gerência");
   if(!nome.value||!foto.files[0])return alert("Preencha tudo");
+
   const img=await uploadImagem(foto.files[0]);
   const ref=doc(db,"vagas",cargo.value);
 
@@ -216,49 +188,55 @@ window.adicionarVaga=async()=>{
   lista.push({nome:nome.value,foto:img});
   await setDoc(ref,{lista});
 
-  nome.value="";foto.value="";
+  await logDiscord("➕ ADICIONOU FUNCIONÁRIO",{
+    nome:nome.value,cargo:cargo.value,
+    acesso:gerenciaAtiva?"Gerência":"Mecânico"
+  });
+
+  nome.value="";foto.value="";cargo.value="";
+  validarBotao();
   renderizar();
 };
 
-/* ===== REMOVER ===== */
-window.removerVaga=async(cargoNome,index)=>{
+/* REMOVER */
+window.removerVaga=async(c,i)=>{
   if(!gerenciaAtiva)return alert("Acesso negado");
-  if(!confirm("Remover?"))return;
 
-  const ref=doc(db,"vagas",cargoNome);
+  const ref=doc(db,"vagas",c);
   let lista=[];
   const snap=await getDocs(collection(db,"vagas"));
-  snap.forEach(d=>{if(d.id===cargoNome)lista=d.data().lista||[]});
+  snap.forEach(d=>{if(d.id===c)lista=d.data().lista||[]});
 
-  lista.splice(index,1);
+  const r=lista[i];
+  lista.splice(i,1);
   await setDoc(ref,{lista});
+
+  await logDiscord("❌ REMOVEU FUNCIONÁRIO",{
+    nome:r.nome,cargo:c,acesso:"Gerência"
+  });
+
   renderizar();
 };
 
-/* ===== RENDER ===== */
+/* RENDER */
 async function renderizar(){
   listaCargos.innerHTML="";
-  cargo.innerHTML="";
   const dados={};
-
   const snap=await getDocs(collection(db,"vagas"));
   snap.forEach(d=>dados[d.id]=d.data().lista||[]);
-
   CARGOS.forEach(c=>{
-    cargo.innerHTML+=`<option>${c}</option>`;
-    const vagas=dados[c]||[];
-
+    const v=dados[c]||[];
     listaCargos.innerHTML+=`
     <div class="subtitulo">${c}</div>
-    <div class="row justify-content-center mb-4">
-      ${vagas.map((v,i)=>`
+    <div class="row">
+      ${v.map((x,i)=>`
       <div class="col-md-3 mb-3">
         <div class="card card-employee">
           <button class="btn-remover" onclick="removerVaga('${c}',${i})">×</button>
-          <img src="${v.foto}" draggable="false">
+          <img src="${x.foto}">
           <div class="card-body text-center">
-            <h5>${v.nome}</h5>
-            <p class="small text-muted">${c}</p>
+            <h5>${x.nome}</h5>
+            <p class="text-muted small">${c}</p>
           </div>
         </div>
       </div>`).join("")}
@@ -266,13 +244,17 @@ async function renderizar(){
   });
 }
 
+atualizarSelectCargo();
 renderizar();
 
-/* ===== PROTEÇÃO GLOBAL ===== */
+/* 🔒 PROTEÇÕES */
 document.addEventListener("contextmenu",e=>e.preventDefault());
 document.addEventListener("dragstart",e=>e.preventDefault());
 document.addEventListener("keydown",e=>{
-  if(e.key==="F12"||(e.ctrlKey&&["U","I","J","C","S"].includes(e.key.toUpperCase()))){
+  if(
+    e.key==="F12" ||
+    (e.ctrlKey && ["U","I","J","C","S"].includes(e.key.toUpperCase()))
+  ){
     e.preventDefault();
   }
 });
