--- a/funcionarios.html
+++ b/funcionarios.html
@@ -7,35 +7,99 @@
 <title>Central Race - Funcionários</title>
 <link rel="icon" href="https://imgur.com/0iskhD3.png">
 
-<!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-
-<!-- Font Awesome -->
 <script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
 
 <style>
-body{font-family:Inter,sans-serif;background:#f4f4f4}
-.topbar{background:#2b2f33;color:#fff;padding:14px 0}
-.logo{font-weight:700;font-size:18px}
-.nav-links a{color:#fff;text-decoration:none;margin-left:18px;font-weight:600}
+body{
+  font-family:Inter,sans-serif;
+  background:#f4f4f4;
+}
+
+/* TOPBAR */
+.topbar{
+  background:#2b2f33;
+  color:#fff;
+  padding:14px 0;
+}
+.logo{
+  font-weight:700;
+  font-size:18px;
+}
+.nav-links a{
+  color:#fff;
+  text-decoration:none;
+  margin-left:18px;
+  font-weight:600;
+}
 .nav-links a:hover{color:#cfcfcf}
-.subtitulo{background:#ddd;text-align:center;font-weight:700;padding:6px;margin:30px 0 15px}
-.card-employee{border-radius:16px;overflow:hidden;position:relative;width:100%;max-width:260px}
-.card-employee img{width:100%;height:180px;object-fit:cover;object-position:50% 30%}
+
+/* TITULOS */
+.subtitulo{
+  background:#ddd;
+  text-align:center;
+  font-weight:700;
+  padding:6px;
+  margin:30px 0 15px;
+}
+
+/* CARD */
+.card-employee{
+  border-radius:16px;
+  overflow:hidden;
+  position:relative;
+  width:100%;
+  max-width:260px;
+}
+
+/* IMAGEM */
+.card-employee img{
+  width:100%;
+  height:180px;
+  object-fit:cover;
+  object-position:50% 30%;
+  display:block;
+  margin:auto;
+  pointer-events:none;
+  user-select:none;
+}
+
+/* REMOVER */
 .btn-remover{
-  position:absolute;top:8px;right:8px;width:30px;height:30px;
-  border-radius:50%;background:#dc3545;color:#fff;border:none;
-  display:none;font-weight:700;z-index:10
+  position:absolute;
+  top:8px;
+  right:8px;
+  width:30px;
+  height:30px;
+  border-radius:50%;
+  background:#dc3545;
+  color:#fff;
+  border:none;
+  display:none;
+  font-weight:700;
+  z-index:10;
 }
 .gerencia-mode .btn-remover{display:block}
-.admin-btn{position:fixed;right:20px;bottom:20px;z-index:1001}
+
+/* ADMIN */
+.admin-btn{
+  position:fixed;
+  right:20px;
+  bottom:20px;
+  z-index:1001;
+}
 .admin-menu{
-  position:fixed;right:-380px;top:0;width:380px;height:100%;
-  background:#fff;box-shadow:-4px 0 20px rgba(0,0,0,.2);
-  padding:20px;transition:.3s;z-index:1000
+  position:fixed;
+  right:-380px;
+  top:0;
+  width:380px;
+  height:100%;
+  background:#fff;
+  box-shadow:-4px 0 20px rgba(0,0,0,.2);
+  padding:20px;
+  transition:.3s;
+  z-index:1000;
 }
 .admin-menu.open{right:0}
 </style>
@@ -43,7 +107,6 @@ body{font-family:Inter,sans-serif;background:#f4f4f4}
 
 <body>
 
-<!-- TOPO -->
 <header class="topbar">
   <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
@@ -69,53 +132,99 @@ body{font-family:Inter,sans-serif;background:#f4f4f4}
 <div class="admin-menu" id="adminMenu">
   <h5>Painel Mecânico</h5>
   <hr>
+
   <label>Cargo</label>
   <select id="cargo" class="form-select mb-2"></select>
+
   <label>Nome</label>
   <input id="nome" class="form-control mb-2">
+
   <label>Foto</label>
   <input id="foto" type="file" accept="image/*" class="form-control mb-3">
+
   <button class="btn btn-primary w-100" onclick="adicionarVaga()">Adicionar vaga</button>
 </div>
 
 <script type="module">
 /* ================= CONFIG ================= */
-const DISCORD_WEBHOOK = "COLE_AQUI_A_URL_DO_WEBHOOK";
+const DISCORD_WEBHOOK = "COLE_AQUI_SUA_URL_DO_WEBHOOK";
 
-const CARGOS=[
-  "Responsável Mecânico","Líder","Sub-Líder",
-  "Gerente","Supervisor de Turnagem","Turnagem","Reparo"
+const CARGOS = [
+  "Responsável Mecânico",
+  "Líder",
+  "Sub-Líder",
+  "Gerente",
+  "Supervisor de Turnagem",
+  "Turnagem",
+  "Reparo"
 ];
 
-const SENHA_ADMIN="admin123";
-const SENHA_GERENCIA="gerencia456";
+const CARGOS_RESTRITOS = [
+  "Responsável Mecânico",
+  "Líder",
+  "Sub-Líder",
+  "Gerente",
+  "Supervisor de Turnagem"
+];
 
-let nivelAcesso="Visitante";
-let gerenciaAtiva=false;
+const SENHA_ADMIN = "admin123";
+const SENHA_GERENCIA = "gerencia456";
+
+const MAX_TENTATIVAS = 3;
+const TEMPO_BLOQUEIO = 60 * 60 * 1000;
+
+let nivelAcesso = "Visitante";
+let gerenciaAtiva = false;
 
 /* ================= FIREBASE ================= */
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getFirestore, collection, doc, getDocs, setDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
-const app=initializeApp({
+const app = initializeApp({
   apiKey:"AIzaSyD2zieCD4d-_olcWE6O0QlepyxWLGhyI",
   authDomain:"centralrace-c4ad0.firebaseapp.com",
   projectId:"centralrace-c4ad0"
 });
-const db=getFirestore(app);
+const db = getFirestore(app);
 
 /* ================= CLOUDINARY ================= */
-const CLOUD_NAME="dfyiwxdhn";
-const UPLOAD_PRESET="funcionarios";
+const CLOUD_NAME = "dfyiwxdhn";
+const UPLOAD_PRESET = "funcionarios";
 
 async function uploadImagem(f){
-  const fd=new FormData();
-  fd.append("file",f);
-  fd.append("upload_preset",UPLOAD_PRESET);
-  const r=await fetch(`https://api.cloudinary.com/v1_1/${CLOUD_NAME}/image/upload`,{
-    method:"POST",body:fd
+  const fd = new FormData();
+  fd.append("file", f);
+  fd.append("upload_preset", UPLOAD_PRESET);
+  const r = await fetch(`https://api.cloudinary.com/v1_1/${CLOUD_NAME}/image/upload`,{
+    method:"POST",
+    body:fd
   });
   return (await r.json()).secure_url;
+}
+
+/* ================= BLOQUEIO SENHA ================= */
+function podeTentar(tipo){
+  const b = JSON.parse(localStorage.getItem("bloqueio_"+tipo));
+  if(!b) return true;
+  if(Date.now() > b.ate){
+    localStorage.removeItem("bloqueio_"+tipo);
+    localStorage.removeItem("tentativas_"+tipo);
+    return true;
+  }
+  return false;
+}
+
+function erroSenha(tipo){
+  let t = Number(localStorage.getItem("tentativas_"+tipo)) || 0;
+  t++;
+  localStorage.setItem("tentativas_"+tipo, t);
+
+  if(t >= MAX_TENTATIVAS){
+    localStorage.setItem("bloqueio_"+tipo, JSON.stringify({ ate: Date.now() + TEMPO_BLOQUEIO }));
+    alert("Acesso bloqueado por 1 hora.");
+  }else{
+    alert(`Senha incorreta (${t}/${MAX_TENTATIVAS})`);
+  }
 }
 
 /* ================= LOG DISCORD ================= */
@@ -126,87 +235,109 @@ async function enviarLog(acao,nome,cargo){
     body:JSON.stringify({
       embeds:[{
         title:acao,
-        color:acao.includes("➕") ? 3066993 : 15158332,
         description:
           `👮 **Acesso:** ${nivelAcesso}\n`+
           `👤 **Nome:** ${nome}\n`+
           `🛠️ **Cargo:** ${cargo}\n\n`+
           `🕒 **Horário:** ${new Date().toLocaleString("pt-BR")}\n`+
           `🌐 **Navegador:** ${navigator.userAgent}`,
-        footer:{ text:"Central Race • Logs" },
-        timestamp:new Date()
+        color: acao.includes("➕") ? 3066993 : 15158332,
+        footer:{ text:"Central Race • Logs" }
       }]
     })
   });
 }
 
 /* ================= ACESSOS ================= */
-window.abrirAdmin=()=>{
-  if(prompt("Senha Admin:")===SENHA_ADMIN){
+window.abrirAdmin = () => {
+  if(!podeTentar("admin")) return alert("Admin bloqueado por 1 hora");
+
+  if(prompt("Senha Admin:") === SENHA_ADMIN){
     nivelAcesso="Admin";
     adminMenu.classList.toggle("open");
-  }else alert("Senha incorreta");
+    localStorage.removeItem("tentativas_admin");
+  }else erroSenha("admin");
 };
 
-window.acessoGerencia=()=>{
-  if(prompt("Senha Gerência:")===SENHA_GERENCIA){
+window.acessoGerencia = () => {
+  if(!podeTentar("gerencia")) return alert("Gerência bloqueada por 1 hora");
+
+  if(prompt("Senha Gerência:") === SENHA_GERENCIA){
     nivelAcesso="Gerência";
     gerenciaAtiva=true;
     document.body.classList.add("gerencia-mode");
+    localStorage.removeItem("tentativas_gerencia");
     alert("Modo Gerência ativado");
-  }else alert("Senha incorreta");
+  }else erroSenha("gerencia");
 };
 
 /* ================= ADICIONAR ================= */
-window.adicionarVaga=async()=>{
-  if(!nome.value||!foto.files[0])return alert("Preencha tudo");
+window.adicionarVaga = async () => {
 
-  const img=await uploadImagem(foto.files[0]);
-  const ref=doc(db,"vagas",cargo.value);
+  if(
+    CARGOS_RESTRITOS.includes(cargo.value) &&
+    nivelAcesso !== "Gerência"
+  ){
+    return alert("Apenas a GERÊNCIA pode adicionar esse cargo");
+  }
+
+  if(!nome.value || !foto.files[0]){
+    return alert("Preencha tudo");
+  }
+
+  const img = await uploadImagem(foto.files[0]);
+  const ref = doc(db,"vagas",cargo.value);
 
   let lista=[];
-  const snap=await getDocs(collection(db,"vagas"));
-  snap.forEach(d=>{if(d.id===cargo.value)lista=d.data().lista||[]});
+  const snap = await getDocs(collection(db,"vagas"));
+  snap.forEach(d=>{
+    if(d.id === cargo.value) lista = d.data().lista || [];
+  });
 
-  lista.push({nome:nome.value,foto:img});
-  await setDoc(ref,{lista});
+  lista.push({ nome:nome.value, foto:img });
+  await setDoc(ref,{ lista });
 
-  await enviarLog("➕ Vaga adicionada",nome.value,cargo.value);
+  await enviarLog("➕ Vaga adicionada", nome.value, cargo.value);
 
-  nome.value="";foto.value="";
+  nome.value="";
+  foto.value="";
   renderizar();
 };
 
 /* ================= REMOVER ================= */
-window.removerVaga=async(cargoNome,index)=>{
-  if(!gerenciaAtiva)return alert("Apenas Gerência");
+window.removerVaga = async (cargoNome,index) => {
+  if(!gerenciaAtiva) return alert("Apenas Gerência");
 
-  const ref=doc(db,"vagas",cargoNome);
-  const snap=await getDocs(collection(db,"vagas"));
+  const ref = doc(db,"vagas",cargoNome);
+  const snap = await getDocs(collection(db,"vagas"));
 
   let lista=[];
-  snap.forEach(d=>{if(d.id===cargoNome)lista=d.data().lista||[]});
+  snap.forEach(d=>{
+    if(d.id === cargoNome) lista = d.data().lista || [];
+  });
 
-  const removido=lista[index];
+  const removido = lista[index];
   lista.splice(index,1);
 
-  await setDoc(ref,{lista});
-  await enviarLog("❌ Vaga removida",removido.nome,cargoNome);
-
+  await setDoc(ref,{ lista });
+  await enviarLog("❌ Vaga removida", removido.nome, cargoNome);
   renderizar();
 };
 
 /* ================= RENDER ================= */
 async function renderizar(){
-  listaCargos.innerHTML="";cargo.innerHTML="";
+  listaCargos.innerHTML="";
+  cargo.innerHTML="";
+
   const dados={};
-  const snap=await getDocs(collection(db,"vagas"));
+  const snap = await getDocs(collection(db,"vagas"));
   snap.forEach(d=>dados[d.id]=d.data().lista||[]);
 
   CARGOS.forEach(c=>{
-    cargo.innerHTML+=`<option>${c}</option>`;
-    const vagas=dados[c]||[];
-    listaCargos.innerHTML+=`
+    cargo.innerHTML += `<option>${c}</option>`;
+    const vagas = dados[c] || [];
+
+    listaCargos.innerHTML += `
       <div class="subtitulo">${c}</div>
       <div class="row justify-content-center mb-4">
         ${vagas.map((v,i)=>`
@@ -219,7 +350,8 @@ async function renderizar(){
                 <p class="text-muted small">${c}</p>
               </div>
             </div>
-          </div>`).join("")}
+          </div>
+        `).join("")}
       </div>`;
   });
 }
@@ -229,8 +361,12 @@ renderizar();
 document.addEventListener("contextmenu",e=>e.preventDefault());
 document.addEventListener("dragstart",e=>e.preventDefault());
 document.addEventListener("keydown",e=>{
-  if(e.key==="F12"||(e.ctrlKey&&["U","I","J","C","S"].includes(e.key.toUpperCase())))
+  if(
+    e.key==="F12" ||
+    (e.ctrlKey && ["U","I","J","C","S"].includes(e.key.toUpperCase()))
+  ){
     e.preventDefault();
+  }
 });
 </script>
 
