--- a/funcionarios.html
+++ b/funcionarios.html
@@ -147,7 +147,7 @@ body{
 
 <script type="module">
 /* ================= CONFIG ================= */
-const DISCORD_WEBHOOK = "COLE_AQUI_SUA_URL_DO_WEBHOOK";
+const DISCORD_WEBHOOK = "https://discord.com/api/webhooks/1459229965127258132/nJShQ4vgkHN1EakcgA7NzrJhZPaWgIYQJVCldfpeTZW0r--2Fg_djbUz0xnyJkiE3m7B";
 
 const CARGOS = [
   "Responsável Mecânico",
@@ -373,3 +373,4 @@ document.addEventListener("keydown",e=>{
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
