--- a/funcionarios.html
+++ b/funcionarios.html
@@ -167,7 +167,7 @@ const CARGOS_RESTRITOS = [
   "Supervisor de Turnagem"
 ];
 
-const SENHA_ADMIN = "admin123";
+const SENHA_ADMIN = "mecanicorace26";
 const SENHA_GERENCIA = "gerencia456";
 
 const MAX_TENTATIVAS = 3;
@@ -373,4 +373,5 @@ document.addEventListener("keydown",e=>{
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
