--- a/calculadora.html
+++ b/calculadora.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Central Race - Relatório Profissional</title>
+<title>Deboxe Customs - Relatório Profissional</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -58,8 +58,8 @@ textarea{
 <header class="topbar">
 <div class="container d-flex justify-content-between align-items-center">
   <div class="d-flex align-items-center gap-3">
-    <img src="https://imgur.com/0iskhD3.png" style="height:60px;border-radius:8px">
-    <div class="logo">Central Race</div>
+    <img src="https://imgur.com/Nw9g2Q2.png" style="height:60px;border-radius:8px">
+    <div class="logo">Deboxe Customs</div>
   </div>
   <nav class="nav-links d-none d-md-flex">
     <a href="index.html">Início</a>
@@ -243,7 +243,7 @@ function calc(){
 function gerar(){
   if(!id.value) return alert("ID obrigatório");
   let total=0;
-  let txt = `🛠️ RELATÓRIO Central Race
+  let txt = `🛠️ RELATÓRIO Deboxe Customs
 👨‍🔧 Mecânico: ${nome.value || "N/I"}
 🆔 Cliente: ${id.value}
 
@@ -304,6 +304,7 @@ document.addEventListener("keydown",e=>{
 
 </body>
 </html>
+
 
 
 
