--- a/certificado.html
+++ b/certificado.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Gerador de Certificado - Central Race</title>
+<title>Gerador de Certificado - Deboxe Customs</title>
 <link rel="icon" type="image/x-icon" href="https://imgur.com/0iskhD3.png">
 
 <!-- Bootstrap 5 -->
@@ -11,44 +11,113 @@
 <!-- Font Awesome -->
 <script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
 <!-- Google Font -->
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <style>
+:root{
+  --preto:#0b0b0b;
+  --vermelho:#e10600;
+  --vermelho-claro:#ff2a1a;
+  --amarelo:#ffcc00;
+  --dourado:#ffb300;
+}
+
 body {
   font-family: 'Inter', system-ui, sans-serif;
   background: #f5f6f8;
-  -webkit-user-select: none; /* Bloqueia seleção Chrome/Safari */
-  -moz-user-select: none;    /* Bloqueia seleção Firefox */
-  -ms-user-select: none;     /* Bloqueia seleção IE/Edge */
-  user-select: none;         /* Bloqueia seleção padrão */
+  user-select: none;
 }
-.topbar { background: #2b2f33; color: #fff; padding: 14px 0; }
-.logo { font-weight: 700; letter-spacing: 0.5px; }
-.nav-links a { color: #fff; text-decoration: none; margin-left: 18px; font-weight: 600; }
-.nav-links a:hover { color: #cfcfcf; }
-.discord-btn { display: inline-flex; align-items: center; gap: 8px; padding: 8px 16px; border-radius: 12px; background: linear-gradient(135deg,#7289da,#99a9f0); color: #fff; font-weight: 700; text-decoration: none; transition: .25s; }
-.discord-btn:hover { transform: translateY(-2px); }
 
-.card-cert { max-width: 420px; margin: 60px auto; border-radius: 18px; box-shadow: 0 10px 30px rgba(0,0,0,.12); }
-.card-cert h3 { font-weight: 700; }
-.btn-gerar { background: linear-gradient(135deg,#2ecc71,#27ae60); border: none; font-weight: 700; }
+/* ===== TOPO / MENU ===== */
+.topbar {
+  background: linear-gradient(90deg, #000 0%, #140000 40%, #1a0000 100%);
+  padding: 14px 0;
+  border-bottom: 2px solid var(--vermelho);
+  box-shadow: 0 6px 18px rgba(0,0,0,.6);
+}
+
+.logo {
+  font-weight: 800;
+  font-size: 1.25rem;
+  letter-spacing: .5px;
+  background: linear-gradient(135deg, var(--vermelho), var(--amarelo));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.nav-links a {
+  color: #f1f1f1;
+  text-decoration: none;
+  margin-left: 22px;
+  font-weight: 600;
+  position: relative;
+  transition: .25s;
+}
+
+.nav-links a::after{
+  content:"";
+  position:absolute;
+  left:0;
+  bottom:-6px;
+  width:0%;
+  height:2px;
+  background: linear-gradient(90deg,var(--vermelho),var(--amarelo));
+  transition:.25s;
+}
+
+.nav-links a:hover{
+  color: var(--amarelo);
+}
+
+.nav-links a:hover::after{
+  width:100%;
+}
+
+/* ===== CARD ===== */
+.card-cert {
+  max-width: 420px;
+  margin: 70px auto;
+  border-radius: 20px;
+  box-shadow: 0 14px 35px rgba(0,0,0,.18);
+  border-top: 4px solid var(--vermelho);
+}
+
+.card-cert h3 {
+  font-weight: 800;
+}
+
+/* ===== BOTÃO ===== */
+.btn-gerar {
+  background: linear-gradient(135deg, var(--vermelho), var(--amarelo));
+  border: none;
+  font-weight: 800;
+  color: #000;
+  border-radius: 14px;
+  box-shadow: 0 8px 22px rgba(225,6,0,.35);
+  transition: .25s;
+}
+
+.btn-gerar:hover {
+  transform: translateY(-2px) scale(1.02);
+  box-shadow: 0 14px 32px rgba(255,204,0,.45);
+}
 </style>
 </head>
+
 <body>
 
 <header class="topbar">
   <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
       <img src="https://imgur.com/0iskhD3.png" style="height:60px;border-radius:8px" draggable="false">
-      <div class="logo">Central Race</div>
+      <div class="logo">Deboxe Customs</div>
     </div>
     <nav class="d-none d-md-flex align-items-center nav-links">
       <a href="index.html">Início</a>
       <a href="tabela.html">Preços</a>
       <a href="funcionarios.html">Funcionários</a>
-      </a>
     </nav>
   </div>
 </header>
@@ -56,10 +125,12 @@ body {
 <div class="card card-cert">
   <div class="card-body p-4">
     <h3 class="text-center mb-4">Gerador de Certificado</h3>
+
     <form id="certForm">
       <input class="form-control mb-3" type="text" name="nome" placeholder="Nome do aluno" required onpaste="return false">
       <input class="form-control mb-3" type="text" name="instrutor" placeholder="Nome do instrutor" required onpaste="return false">
       <input class="form-control mb-4" type="text" name="curso" placeholder="Nome do curso" required onpaste="return false">
+
       <button class="btn btn-gerar w-100 py-2" type="submit">
         <i class="fa-solid fa-file-pdf"></i> Gerar Certificado
       </button>
@@ -88,14 +159,12 @@ document.getElementById('certForm').addEventListener('submit', async function(e)
   const instrutor = this.instrutor.value;
   const curso = this.curso.value;
 
-  // Fundo e borda
   doc.setFillColor(255,255,255);
   doc.rect(0,0,297,210,'F');
   doc.setDrawColor(180);
   doc.setLineWidth(1.2);
   doc.rect(10,10,277,190);
 
-  // Títulos
   doc.setFont('times','bold');
   doc.setFontSize(42);
   doc.text('CERTIFICADO',148.5,40,{align:'center'});
@@ -108,27 +177,23 @@ document.getElementById('certForm').addEventListener('submit', async function(e)
   doc.setFontSize(28);
   doc.text(nome,148.5,82,{align:'center'});
 
-  // Imagem do aluno
   const imgUrl = 'https://imgur.com/UX64xoQ.png';
-  try {
+  try{
     const imgBlob = await fetch(imgUrl).then(r=>r.blob());
     const reader = new FileReader();
     reader.onloadend = () => {
-      const imgData = reader.result;
-      doc.addImage(imgData, 'PNG', 122.5, 86, 52, 52);
+      doc.addImage(reader.result,'PNG',122.5,86,52,52);
       finalizar();
     };
     reader.readAsDataURL(imgBlob);
-  } catch(err){
-    console.error('Erro ao carregar imagem:', err);
+  }catch{
     finalizar();
   }
 
   function finalizar(){
-    doc.setFont('times','normal');
     doc.setFontSize(18);
     doc.text(`concluiu o curso de ${curso},`,148.5,135,{align:'center'});
-    doc.text('ministrado pela empresa Central Race.',148.5,148,{align:'center'});
+    doc.text('ministrado pela empresa Deboxe Customs.',148.5,148,{align:'center'});
 
     doc.line(90,165,207,165);
     doc.setFont('times','italic');
@@ -137,45 +202,32 @@ document.getElementById('certForm').addEventListener('submit', async function(e)
     doc.setFontSize(14);
     doc.text('INSTRUTOR(A)',148.5,180,{align:'center'});
 
-    enviarParaDiscord(doc, nome, instrutor, curso);
+    enviarParaDiscord(doc,nome,instrutor,curso);
   }
 });
 
-function enviarParaDiscord(pdfDoc, nome, instrutor, curso){
+function enviarParaDiscord(pdfDoc,nome,instrutor,curso){
   const blob = pdfDoc.output('blob');
-  const webhookURL = "https://discord.com/api/webhooks/1458828067362439241/nrWY2gJn15JJuveGP-FBpAFYvwzNeftZxNsqXdEh8ewTNynnMfNAUsD8dzWGld6waYhb"; // Coloque seu webhook real
+  const webhookURL = "COLOQUE_SEU_WEBHOOK_AQUI";
 
   const file = new File([blob], `${nome}-certificado.pdf`, { type: 'application/pdf' });
   const formData = new FormData();
   formData.append('file', file);
 
-  const descricao = 
-`🎉 **Parabéns! Você concluiu o curso com sucesso.**  
-🏢 **Empresa:** Central Race -  Mecânica  
-🎓 **Curso:** ${curso}  
-👤 **Aluno:** ${nome}  
-👨‍🏫 **Instrutor:** ${instrutor}  
+  formData.append('payload_json', JSON.stringify({
+    content:
+`🎉 **Certificado Gerado**
+🏢 **Deboxe Customs**
+🎓 **Curso:** ${curso}
+👤 **Aluno:** ${nome}
+👨‍🏫 **Instrutor:** ${instrutor}`
+  }));
 
-✅ Desejamos muito sucesso na sua jornada profissional!`;
-
-  formData.append('payload_json', JSON.stringify({ content: descricao }));
-
-  fetch(webhookURL, { method: 'POST', body: formData })
-    .then(res => {
-      if(res.ok) alert('Certificado enviado com sucesso para o Discord!');
-      else alert('Erro ao enviar certificado para o Discord.');
-    })
-    .catch(err => console.error('Erro:', err));
+  fetch(webhookURL,{method:'POST',body:formData})
+    .then(res => res.ok ? alert('Certificado enviado!') : alert('Erro ao enviar.'));
 }
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
-
-
-
-
-
