--- a/certificado.html
+++ b/certificado.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Gerador de Certificado - Deboxe Customs</title>
-<link rel="icon" type="image/x-icon" href="https://imgur.com/0iskhD3.png">
+<link rel="icon" type="image/x-icon" href="https://imgur.com/Nw9g2Q2.png">
 
 <!-- Bootstrap 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -111,7 +111,7 @@ body {
 <header class="topbar">
   <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
-      <img src="https://imgur.com/0iskhD3.png" style="height:60px;border-radius:8px" draggable="false">
+      <img src="https://imgur.com/Nw9g2Q2.png" style="height:60px;border-radius:8px" draggable="false">
       <div class="logo">Deboxe Customs</div>
     </div>
     <nav class="d-none d-md-flex align-items-center nav-links">
@@ -231,3 +231,4 @@ function enviarParaDiscord(pdfDoc,nome,instrutor,curso){
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
